--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -1,27 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>Produtos</title>
-</head>
-<body style="background-color:#f1f1f1">
-<header class="my-4">
-    <nav class="d-flex justify-content-center">
-        <div class="d-flex gap-4 p-4">
-            <span>
-                <a class="font-monospace text-decoration-none fs-4 text-primary" href="/">HOME</a>
-            </span>
-            <span>
-                <a class="font-monospace text-decoration-none fs-4 text-black" href="/sale">VENDAS</a>
-            </span>
-            <span>
-                <a class="font-monospace text-decoration-none fs-4 text-black" href="/sale">ESTOQUE</a>
-            </span>
-        </div>
-    </nav>
-</header>
+<div th:replace="~{layout/heander}"></div>
 <main class="container-fluid">
     <div class="card col-10 mx-auto shadow mt-4">
         <div class="card-body">
@@ -32,9 +9,11 @@
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="/assets/vendors/sweetAlert/sweetalert2.all.js"></script>
+<script src="/assets/js/menuControler.js"></script>
 <script>
     let success = "[[${success}]]"
     let error = "[[${error}]]"
+    setActive(0);
 </script>
 <script src="/assets/js/AlertTrigger.js"></script>
 
