--- a/src/main/resources/templates/sale/sale.html
+++ b/src/main/resources/templates/sale/sale.html
@@ -1,41 +1,45 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>Produtos</title>
-</head>
-<body style="background-color:#f1f1f1">
-    <header class="my-4">
-        <nav class="d-flex justify-content-center">
-            <div class="d-flex gap-4 p-4">
-                <span>
-                    <a class="font-monospace text-decoration-none fs-4 text-black" href="/">HOME</a>
-                </span>
-                <span>
-                    <a class="font-monospace text-decoration-none fs-4 text-primary" href="/sale">VENDAS</a>
-                </span>
-                <span>
-                    <a class="font-monospace text-decoration-none fs-4 text-black" href="/stock">ESTOQUE</a>
-                </span>
-            </div>
-        </nav>
-    </header>
+<div th:replace="~{layout/heander}"></div>
     <main class="container-fluid">
-        <div class="card col-10 mx-auto shadow mt-4">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                [[${products}]]
+        <div class="card col-11 mx-auto shadow mt-4">
+            <div class="card-body ">
+                <div class="justify-content-center row row-cols-4 px-3 gap-4 d-flex">
+                    <div class="card shadow col item-sale" th:each="product: ${products}"
+                         data-quantity="0" th:data-valueUn="${product.valor}" data-active=false>
+                        <div class="card-body row">
+                            <div class="col-10 checked-click-area" th:id="${product.id}">
+                                <h5 class="card-title" th:text="${product.name}"></h5>
+                                <h6 class="card-subtitle mb-2 text-muted" th:text="'Estoque: '+${product.quantity}"></h6>
+                                <p class="card-text" th:text="${#strings.replace(#numbers.formatCurrency(product.valor), '.00', '')}"></p>
+                            </div>
+                            <div class="col-2">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" th:id="'input' + ${product.id}" onchange="toggleSelect(this)">
+                                </div>
+                            </div>
+                            <div th:id="'selectContainer' + ${product.id}" style="display:none;" class="mt-2">
+                                <select class="form-select form-select-sm"  th:id="'select' + ${product.id}">
+                                    <option> Quantidade</option>
+                                    <option th:each="index : ${#numbers.sequence(1, product.getQuantity())}" th:value="${index}" th:text="${index}"></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-end">
+                    <span id="valueFull" class="font-monospace fs-3">RS 32,00</span>
+                </div>
             </div>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="/assets/vendors/sweetAlert/sweetalert2.all.js"></script>
+    <script src="/assets/js/menuControler.js"></script>
+    <script src="/assets/js/sale.js"></script>
+
     <script>
         let success = "[[${success}]]"
         let error = "[[${error}]]"
+        setActive(1);
     </script>
     <script src="/assets/js/AlertTrigger.js"></script>
 
