--- a/src/main/resources/templates/sale/sale.html
+++ b/src/main/resources/templates/sale/sale.html
@@ -28,7 +28,7 @@
                 <div class="d-grid gap-2 d-md-flex justify-content-between mt-4">
                     <div>
                         <button type="button" class="btn btn-success" onclick="confirmSale()">Confirmar</button>
-                        <button type="button" class="btn btn-secondary" onclick="cleanProductsSelectes()">Limpar</button>
+                        <button type="button" class="btn btn-secondary" onclick="confirmCleanProductsSelecteds()">Limpar</button>
                     </div>
                     <span id="valueFull" class="font-monospace fs-3">R$ 0,00</span>
                 </div>
