--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -2,14 +2,34 @@
 <main class="container-fluid">
     <div class="card col-10 mx-auto shadow mt-4">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <table class="table table-striped table-hover" id="table">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Valor</th>
+                    <th scope="col">Quantidade</th>
+                    <th scope="col">Insumos</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="product: ${products}">
+                    <td class="" th:text="${product.id}"></td>
+                    <td class="" th:text="${product.name}"></td>
+                    <td class="" th:text="${#strings.replace(#numbers.formatCurrency(product.valor), '.00', '')}"></td>
+                    <td class="" th:text="${product.quantity}"></td>
+                    <td class="" th:text="${product.insumos}"></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="/assets/vendors/sweetAlert/sweetalert2.all.js"></script>
 <script src="/assets/js/menuControler.js"></script>
+<script src="/assets/vendors/dataTable/tableBuilder.js"></script>
+
 <script>
     let success = "[[${success}]]"
     let error = "[[${error}]]"
