--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -1,34 +1,69 @@
 <div th:replace="~{layout/heander}"></div>
 <main class="container-fluid">
-    <div class="card col-10 mx-auto shadow mt-4">
+
+    <div class="card col-10 mx-auto shadow mt-4"  data-mdb-animation-start="onHover">
         <div class="card-body">
-            <table class="table table-striped table-hover" id="table">
+            <table class="table table-striped table-hover fade-in" id="table">
                 <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Nome</th>
+                    <th scope="col">Data</th>
+                    <th scope="col">Produtos</th>
+                    <th scope="col">Quantidades</th>
                     <th scope="col">Valor</th>
-                    <th scope="col">Quantidade</th>
-                    <th scope="col">Insumos</th>
+                    <th scope="col">Apagar</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="product: ${products}">
-                    <td class="" th:text="${product.id}"></td>
-                    <td class="" th:text="${product.name}"></td>
-                    <td class="" th:text="${#strings.replace(#numbers.formatCurrency(product.valor), '.00', '')}"></td>
-                    <td class="" th:text="${product.quantity}"></td>
-                    <td class="" th:text="${product.insumos}"></td>
+                <tr th:each="venda: ${vendas}">
+                    <td class="align-middle" th:text="${venda.id}"></td>
+                    <td class="align-middle" th:text="${#dates.format(venda.date, 'dd/MM HH:mm')}"></td>
+                    <td>
+                        <table>
+                            <tr th:each="item : ${venda.itens}">
+                                <td>
+                                    <span th:text="${item.product.name}"></span>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td>
+                        <table>
+                            <tr th:each="item : ${venda.itens}">
+                                <td>
+                                    <span th:text="${item.quantitySold}"></span>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td class="align-middle" th:text="${#strings.replace(#numbers.formatCurrency(venda.value), '.00', '')}"></td>
+                    <td class="align-middle">
+                        <div class="text-nowrap ">
+                            <a style="color: red; cursor: pointer" th:id="'product'+${venda.id }" onclick="confirmDelete(this.id)" >
+                                <i class="fa-solid fa-trash-can" title="Editar"></i>
+                            </a>
+                        </div>
+                    </td>
                 </tr>
                 </tbody>
             </table>
+            <div class="text-end">
+                <span  th:text="'Total de vendas: '+${#strings.replace(#numbers.formatCurrency(fullValue), '.00', '')}"></span>
+            </div>
+
         </div>
+
     </div>
 </main>
+<script src="/assets/vendors/dataTable/jsquery-3.6.0.js"></script>
+<script src="/assets/vendors/dataTable/dataTables.js"></script>
+<script src="/assets/vendors/dataTable/tableBuilder.js"></script>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="/assets/vendors/sweetAlert/sweetalert2.all.js"></script>
 <script src="/assets/js/menuControler.js"></script>
-<script src="/assets/vendors/dataTable/tableBuilder.js"></script>
+<script src="/assets/js/index.js"></script>
 
 <script>
     let success = "[[${success}]]"
@@ -36,7 +71,6 @@
     setActive(0);
 </script>
 <script src="/assets/js/AlertTrigger.js"></script>
-
 </body>
 </html>
 
