--- a/src/main/resources/templates/layout/heander.html
+++ b/src/main/resources/templates/layout/heander.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="/assets/vendors/dataTable/dataTable.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Produtos</title>
 </head>
-<body style="background-color:#f1f1f1">
+<body style="background-color:#F5F5F7">
 <header class="my-4">
     <nav class="d-flex justify-content-center">
         <div class="d-flex gap-4 p-4 align-items-center">
-                <span>
-                    <a class="font-monospace text-decoration-none fs-4 text-black js-menu-item" href="/">HOME</a>
-                </span>
             <span>
-                    <a class="font-monospace text-decoration-none fs-4 text-black js-menu-item" href="/sale">VENDAS</a>
-                </span>
+                <a class="font-monospace text-decoration-none fs-4 text-black js-menu-item"  style="color: #F5F!important"  href="/">HISTÓRICO</a>
+            </span>
             <span>
-                    <a class="font-monospace text-decoration-none fs-4 text-black js-menu-item" href="/stock">ESTOQUE</a>
-                </span>
+                <a class="font-monospace text-decoration-none fs-4 text-black js-menu-item"  style="color: #F5F!important" href="/sale">CAIXA</a>
+            </span>
+            <span>
+                <a class="font-monospace text-decoration-none fs-4 text-black js-menu-item"  style="color: #F5F!important" href="/stock">ESTOQUE</a>
+            </span>
         </div>
     </nav>
 </header>
