--- a/src/main/resources/templates/sale/sale.html
+++ b/src/main/resources/templates/sale/sale.html
@@ -1,40 +1,102 @@
-<div th:replace="~{layout/heander}"></div>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <link rel="stylesheet" href="/assets/vendors/dataTable/dataTable.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Produtos</title>
+    <style>
+        @keyframes moveText {
+
+            0% {
+                transform: translateX(-110%);
+            }
+            99%{
+                transform: translateX(220%);
+            }
+        }
+
+        #letreiro {
+            white-space: nowrap;
+            overflow: hidden;
+            display: inline-block;
+            animation: moveText 25s ease-in infinite reverse ;
+        }
+    </style>
+</head>
+<body style="background-color:#F5F5F7">
+<header class="my-4">
+    <nav class="d-flex justify-content-center">
+        <div class="d-flex align-items-center">
+            <span>
+                <p class="font-monospace text-decoration-none text-black js-menu-item text-black"  style="font-size: 50px!important" >bud</p>
+            </span>
+        </div>
+    </nav>
+</header>
     <main class="container-fluid">
-        <div class="card col-11 mx-auto shadow mt-4">
-            <div class="card-body ">
-                <div class="justify-content-center row row-cols-4 px-3 gap-4 d-flex">
-                    <div class="card shadow col item-sale" th:each="product: ${products}"
+        <div class="card col-11 mx-auto shadow my-4 border-0" style="background-color: #f5f5f7">
+            <div class="card-body " th:if="${#lists.size(products) > 0}" style="background-color: #f5f5f7">
+                <div class="row px-3 d-flex">
+                    <div class="col-md-6 col-sm-12 col-lg-3 item-sale p-2"  th:each="product: ${products}" style="flex: revert-layer!important;background-color: #f5f5f7;"
                          th:data-valueUn="${product.valor}" th:data-product-name="${product.name}" th:id="${product.id}" >
-                        <div class="card-body row">
-                            <div class="col-10 checked-click-area" th:data-product-id="${product.id}">
-                                <h5 class="card-title" th:text="${product.name}"></h5>
-                                <h6 class="card-subtitle mb-2 text-muted" th:text="'Estoque: '+${product.quantity}"></h6>
-                                <p class="card-text" th:text="${#strings.replace(#numbers.formatCurrency(product.valor), '.00', '')}"></p>
-                            </div>
-                            <div class="col-2 mb-2">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" th:id="'input' + ${product.id}" onchange="toggleSelect(this)">
+                        <div class="card " >
+                            <div class="card-body d-flex flex-wrap">
+                                <div class="col-11 checked-click-area" th:data-product-id="${product.id}">
+                                    <h5 class="card-title" th:text="${product.name}"></h5>
+                                    <div class="d-flex justify-content-start align-content-center">
+                                        <p class="card-text fw-semibold fs-6" th:text="${#strings.replace(#numbers.formatCurrency(product.valor), '.00', '')}"></p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div th:id="'selectContainer' + ${product.id}" style="display:none;" >
-                                <select class="form-select form-select-sm"  th:id="'selectQuantity' + ${product.id}">
-                                    <option value="0"> Quantidade</option>
-                                    <option th:each="index : ${#numbers.sequence(1, product.getQuantity())}" th:value="${index}" th:text="${index}"></option>
-                                </select>
+                                <div class="col-1 mb-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" th:id="'input' + ${product.id}" onchange="toggleSelect(this)">
+                                    </div>
+                                </div>
+                                <div class="w-100 mt-2" th:id="'selectContainer' + ${product.id}" style="display:none;" >
+                                    <select class="form-select form-select-sm"  th:id="'selectQuantity' + ${product.id}">
+                                        <option value="0"> Quantidade</option>
+                                        <option th:each="index : ${#numbers.sequence(1, product.getQuantity())}" th:value="${index}" th:text="${index}"></option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="d-grid gap-2 d-md-flex justify-content-between mt-4">
+
+                <div class="d-grid gap-2 d-md-flex justify-content-between mt-4 px-3">
                     <div>
-                        <button type="button" class="btn btn-success" onclick="confirmSale()">Confirmar</button>
-                        <button type="button" class="btn btn-secondary" onclick="confirmCleanProductsSelecteds()">Limpar</button>
+                        <button type="button" class="btn btn-success" onclick="confirmSale()" >Confirmar</button>
+                        <button type="button" class="btn btn-outline-secondary" onclick="confirmCleanProductsSelecteds()">Limpar</button>
                     </div>
-                    <span id="valueFull" class="font-monospace fs-3">R$ 0,00</span>
+                    <span id="valueFull" class="font-monospace fs-4">Valor Total: R$ 0,00</span>
+                </div>
+            </div>
+            <div class="card-body"  th:unless="${#lists.size(products) > 0}">
+                <div class="alert alert-primary d-flex align-items-center" role="alert">
+                    <i class="fa-solid fa-triangle-exclamation"></i>
+                    <div class="ms-3">
+                        O nosso estoque está vazio!!!!!!
+                    </div>
                 </div>
             </div>
         </div>
-    </main>
+        <div class="col-11 mx-auto" style="overflow: hidden">
+            <span class="marquee fs-4 "  id="letreiro">
+                Seu texto aqui! Repita para ter um letreiro mais longo.
+            </span>
+        </div>
+
+     </main>
+
+    <div class="">
+        <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
+            <p class="text-center text-muted">© 2024 bud, Produções</p>
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="/assets/vendors/sweetAlert/sweetalert2.all.js"></script>
     <script src="/assets/js/menuControler.js"></script>
